--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TaskManager</string>
+    <string name="app_name">AcHolding</string>
     <string name="name">name</string>
     <string name="baseUrlExtDev">http://73.236.2.194:8080/WooshServer/mvc/taskManager/</string>
     <string name="baseUrlLtDev">http://192.168.1.101:8080/WooshServer/mvc/taskManager/</string>
@@ -12,6 +12,7 @@
     <string name="baseUrlProd">http://codefishserver.com:8282/CodefishServer/mvc/taskManager/</string>
     <string name="baseUrlCloudTest">http://codefishserver.com:8282/CodefishTestServer/mvc/taskManager/</string>
     <string name="baseUrlAcHTest">http://hrportal.ac-holding.net:8181/ACHoldingServerTest/mvc/taskManager/</string>
+    <string name="baseUrlAcH">http://hrportal.ac-holding.net:8181/ACHoldingServer/mvc/taskManager/</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name ="complete_task" > Complete Task </string>
     <string name ="edit_task" > Edit Task</string>
