--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Streamline</string>
     <string name="name">name</string>
     <string name="baseUrlDev">http://10.0.0.2:8080/CodefishTestServer/mvc/</string>
+    <string name="baseUrlUniDev">http://150.212.78.102:8080/CodefishTestServer/mvc/</string>
     <string name="baseUrlHotSpot">http://192.168.43.149:8080/CodefishTestServer/mvc/</string>
     <string name="baseUrlProd">http://codefishserver.com:8282/CodefishServer/mvc/</string>
     <string name="baseUrlCloudTest">http://codefishserver.com:8282/CodefishTestServer/mvc/</string>
