--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Streamline</string>
-    <string name="hrUrlEP">hrModule/</string>
+    <string name="hrUrlEP">hrWorkflowForm/</string>
     <string name="frmworkUrlEP">taskManager/</string>
     <string name ="complete_task" > Complete Task </string>
     <string name ="edit_task" > Edit Task</string>
