--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="delete_task">Delete Task</string>
     <string name="illegal_error_msg">Illegal Error, please contact the admin</string>
     <string name="network_error">Can not reach CodeFish</string>
-    <string name="request_leave">Request Leave</string>
+    <string name="send_request">Request</string>
+    <string name="procurement_request_form">ProcurementRequest</string>
     <string name="create_project">Project</string>
     <string name="create_task">Task</string>
     <string name="long_text">As they rounded a bend in the path that ran beside the river, Lara recognized the silhouette of a fig tree atop a nearby hill. The weather was hot and the days were long. The fig tree was in full leaf, but not yet bearing fruit.
